fixed overlapping

--- a/queries/queries.css
+++ b/queries/queries.css
@@ -54,6 +54,12 @@
   html {
     font-size: 37.5%;
   }
+  html,
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
   .hero-heading-break {
     display: none;
   }
